[metadata]

name = quantum
version = file:VERSION.txt
url = https://www.bhojpur-consulting.com
author = Bhojpur Consulting Private Limited, India.
author_email = product@bhojpur-consulting.com
project_urls =
    Documentation = https://docs.bhojpur.net/
    Issue Tracker = https://github.com/bhojpur/quantum/
license = MIT
license_file = LICENSE
description = A software development kit for Quantum Computing
long_description = file:README.md
long_description_content_type = text/x-rst; charset=UTF-8
home_page = https://www.bhojpur-consulting.com
requires_dist = setuptools
classifier =
    License :: OSI Approved :: Apache Software License
    Topic :: Software Development :: Libraries :: Python Modules
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]

zip_safe = False
packages = find:
python_requires = >= 3
setup_requires =
  setuptools_scm[toml]
  pybind11 >= 2
install_requires =
    matplotlib >= 3.5.2
    networkx >= 2.8.3
    numpy
    requests
    scipy

[options.extras_require]

braket = boto3
revkit =
     revkit == 3.0a2.dev2
     dormouse
test =
     flaky
     mock
     pytest >= 6.0
     pytest-cov
     pytest-mock

docs =
     sphinx
     sphinx_rtd_theme

# ==============================================================================

[flake8]

max-line-length = 120
exclude =
        .git,
        __pycache__,
        build,
        dist,
        __init__.py
docstring-quotes = """
eradicate-whitelist = # yapf: disable# yapf: enable

# ==============================================================================